fixed spacing
git-svn-id: svn+ssh://svn.opower.com/opt/svnroot/prototypes/opowerjobs@38556 bb9abed2-0933-0410-ade7-e5b856161268

--- a/public/css/defaults.css
+++ b/public/css/defaults.css
@@ -1,5 +1,6 @@
 BODY {
     line-height: 1.3em;
+    margin-top: 10px;
 }
 
 A, .link {
@@ -37,10 +38,10 @@ H2 {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
-UL {
+.page UL {
     border-top: solid 1px #d8d8d8;
 }
-LI {
+.page LI {
     margin: 0;
     padding: 5px 0 5px 18px;
     background: url(theme/bullet-star.gif) left 6px no-repeat;
